fix overlapping hero title

--- a/css/style.css
+++ b/css/style.css
@@ -51,29 +51,31 @@ a {
 
 
 .hero {
-	height: 300px;
-	display: block;
+	height: auto;
 	margin-top: 50px;
 	margin-bottom: 50px;
 
 }
 
 .hero-title {
-	font-size: 42px;
-	width: 600px;
+	font-size: 2.62em;
+	width: auto;
 	line-height: 50px;
+	height: auto;
 }
 
 
+
+
 .section {
-	flex-direction: column;
+	margin: 0 0 50px 0 ;
 
 }
 
 
 
 .aboutMe  p {
-	width: 500px;
+	
 }
 
 /*Base Styles*/
@@ -85,12 +87,10 @@ footer {
 /* Nav */
 
 .nav {
-	padding: 10px 0;
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-
-
+		padding: 10px 0;
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
 }
 
 .nav ul {
